syntax = "proto3";
package contracts.lookups;
option csharp_namespace = "gRPC.Contracts.Lookups";
import "google/protobuf/empty.proto";

service LookupsContract {
	rpc GetStateCodesUs(google.protobuf.Empty) returns (stream StateProvinceCode);
    rpc GetStateCodesUsa(google.protobuf.Empty) returns (stream StateProvinceCode);
    rpc GetDepartmentIds(google.protobuf.Empty) returns (stream grpc_DepartmentId);
    rpc GetShiftIds(google.protobuf.Empty) returns (stream grpc_ShiftId);
}

message grpc_StateProvinceCode {
    int32 id = 1;
    string stateCode = 2;   
}

message grpc_DepartmentId {
    int32 department_id = 1;
    string name = 2;   
}

message grpc_ShiftId {
    int32 shift_id = 1;
    string name = 2;   
}